Trigger Dependabot Workflow when PR is merged
Issue gh-14721

--- a/.github/workflows/trigger-dependabot-auto-merge-forward.yml
+++ b/.github/workflows/trigger-dependabot-auto-merge-forward.yml
@@ -1,7 +1,8 @@
 name: Trigger Dependabot Auto Merge Forward
 
 on:
-  push:
+  pull_request:
+    types: [closed]
 
 permissions: read-all
 
@@ -9,7 +10,7 @@ jobs:
   trigger-worflow:
     name: Trigger Workflow
     runs-on: ubuntu-latest
-    if: ${{ github.event.commits[0].author.username == 'dependabot[bot]' && github.repository == 'spring-projects/spring-security' }}
+    if: ${{ github.event.pull_request.merged == true && github.actor == 'dependabot[bot]' && github.repository == 'spring-projects/spring-security' }}
     steps:
       - name: Checkout
         id: checkout
