--- a/antora-playbook.yml
+++ b/antora-playbook.yml
@@ -18,7 +18,7 @@ content:
   sources:
   - url: https://github.com/spring-projects/spring-security
     branches: [main, '5.{{6..9},{1..9}+({0..9})}.x', '6.+({0..9}).x']
-    tags: ['5.{{6..9},{1..9}+({0..9})}.+({0..9})?(-RC+({0..9}))', '6.+({0..9}).+({0..9})?(-{RC,M}*)','!(5.6.{0..10}*)', '!(5.7.{0..8}*)', '!(5.8.{0..3}*)','!(6.0.{0..3}*)','!(6.1.0*)']
+    tags: ['5.{{6..9},{1..9}+({0..9})}.+({0..9})?(-RC+({0..9}))', '6.+({0..9}).+({0..9})?(-{RC,M}*)','!(5.6.{0..10}*)', '!(5.7.{0..8}*)', '!(5.8.{0..3})','!(6.0.{0..3}*)','!(6.1.0*)']
     start_path: docs
 asciidoc:
   attributes:
