--- a/build.gradle
+++ b/build.gradle
@@ -11,4 +11,12 @@ antora {
 		'ALGOLIA_APP_ID': 'WB1FQYI187',
 		'ALGOLIA_INDEX_NAME': 'springdocs',
 	]
+	// NOTE remember to update the versions in lib/antora/templates/per-branch-antora-playbook.yml as well
+	dependencies = [
+		'@antora/atlas-extension': '1.0.0-alpha.1',
+		'@antora/collector-extension': '1.0.0-alpha.3',
+		'@asciidoctor/tabs': '1.0.0-beta.3',
+		'@springio/antora-extensions': '1.7.0',
+		'@springio/asciidoctor-extensions': '1.0.0-alpha.8',
+	]
 }
