Remove minor version dependency updates for main

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -107,6 +107,7 @@ updates:
       - dependency-name: '*'
         update-types:
           - version-update:semver-major
+          - version-update:semver-minor
   - package-ecosystem: github-actions
     target-branch: 5.8.x
     directory: /
