Run Update Antora UI Spring Workflow Every Day
Closes gh-14993

--- a/.github/workflows/update-antora-ui-spring.yml
+++ b/.github/workflows/update-antora-ui-spring.yml
@@ -1,6 +1,8 @@
 name: Update Antora UI Spring
 
 on:
+  schedule:
+    - cron: '0 10 * * *' # Once per day at 10am UTC
   workflow_dispatch:
 
 jobs:
