--- a/.github/workflows/update-antora-ui-spring.yml
+++ b/.github/workflows/update-antora-ui-spring.yml
@@ -5,9 +5,13 @@ on:
     - cron: '0 10 * * *' # Once per day at 10am UTC
   workflow_dispatch:
 
+permissions:
+  pull-requests: write
+  issues: write
+
 jobs:
   update:
     name: Build
     uses: spring-io/spring-security-release-tools/.github/workflows/update-antora-ui-spring.yml@7f9c379a5fa976c48285c83220b0a86ddc3a952c
     secrets:
-      token: ${{ secrets.GH_ACTIONS_REPO_TOKEN }}
+      token: ${{ secrets.GITHUB_TOKEN }}
