Move docs-build update to new job to avoid concurrency issues with matrix strategy
Issue gh-15106

--- a/.github/workflows/update-antora-ui-spring.yml
+++ b/.github/workflows/update-antora-ui-spring.yml
@@ -1,6 +1,8 @@
 name: Update Antora UI Spring
 
 on:
+  schedule:
+    - cron: '0 10 * * *' # Once per day at 10am UTC
   workflow_dispatch:
 
 permissions:
@@ -11,19 +13,23 @@ permissions:
 jobs:
   update-antora-ui-spring:
     runs-on: ubuntu-latest
-    name: Update
+    name: Update on Supported Branches
     strategy:
       matrix:
         branch: [ '5.8.x', '6.1.x', '6.2.x', 'main' ]
     steps:
       - uses: spring-io/spring-doc-actions/update-antora-spring-ui@17ed79ea5fbd65813c69ef1062a024d4a37ff0ca
-        name: Update on Supported Branches
+        name: Update
         with:
           docs-branch: ${{ matrix.branch }}
           token: ${{ secrets.GITHUB_TOKEN }}
           antora-file-path: 'docs/antora-playbook.yml'
+  update-antora-ui-spring-docs-build:
+    runs-on: ubuntu-latest
+    name: Update on docs-build
+    steps:
       - uses: spring-io/spring-doc-actions/update-antora-spring-ui@17ed79ea5fbd65813c69ef1062a024d4a37ff0ca
-        name: Update on docs-build
+        name: Update
         with:
           docs-branch: 'docs-build'
           token: ${{ secrets.GITHUB_TOKEN }}
