Configure Dependabot to update docs/package.json
Closes gh-15128

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -164,3 +164,19 @@ updates:
     directory: /
     schedule:
       interval: weekly
+
+  - package-ecosystem: npm
+    target-branch: main
+    directory: /docs
+    schedule:
+      interval: weekly
+  - package-ecosystem: npm
+    target-branch: 6.2.x
+    directory: /docs
+    schedule:
+      interval: weekly
+  - package-ecosystem: npm
+    target-branch: 5.8.x
+    directory: /docs
+    schedule:
+      interval: weekly
