--- a/settings.gradle
+++ b/settings.gradle
@@ -6,7 +6,11 @@ pluginManagement {
 
 plugins {
 	id "com.gradle.develocity" version "3.17.4"
-	id "io.spring.ge.conventions" version "0.0.17"
+	id "io.spring.ge.conventions" version "0.0.17" apply false
+}
+
+if (System.getenv("DEVELOCITY_ACCESS_KEY")) {
+	apply plugin: "io.spring.ge.conventions"
 }
 
 dependencyResolutionManagement {
