--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -55,6 +55,31 @@ updates:
           - version-update:semver-major
           - version-update:semver-minor
   - package-ecosystem: gradle
+    target-branch: 6.3.x
+    directory: /
+    schedule:
+      interval: daily
+      time: '03:00'
+      timezone: Etc/UTC
+    labels:
+      - 'type: dependency-upgrade'
+    registries:
+      - spring-milestones
+    ignore:
+      - dependency-name: com.nimbusds:nimbus-jose-jwt
+      - dependency-name: org.python:jython
+      - dependency-name: org.apache.directory.server:*
+      - dependency-name: org.junit:junit-bom
+        update-types:
+          - version-update:semver-major
+      - dependency-name: org.mockito:mockito-bom
+        update-types:
+          - version-update:semver-major
+      - dependency-name: '*'
+        update-types:
+          - version-update:semver-major
+          - version-update:semver-minor
+  - package-ecosystem: gradle
     target-branch: main
     directory: /
     schedule:
@@ -83,6 +108,7 @@ updates:
         update-types:
           - version-update:semver-major
           - version-update:semver-minor
+
   - package-ecosystem: github-actions
     target-branch: 5.8.x
     directory: /
@@ -94,6 +120,26 @@ updates:
     ignore:
       - dependency-name: sjohnr/*
   - package-ecosystem: github-actions
+    target-branch: 6.2.x
+    directory: /
+    schedule:
+      interval: weekly
+    labels:
+      - 'type: task'
+      - 'in: build'
+    ignore:
+      - dependency-name: sjohnr/*
+  - package-ecosystem: github-actions
+    target-branch: 6.3.x
+    directory: /
+    schedule:
+      interval: weekly
+    labels:
+      - 'type: task'
+      - 'in: build'
+    ignore:
+      - dependency-name: sjohnr/*
+  - package-ecosystem: github-actions
     target-branch: main
     directory: /
     schedule:
@@ -122,6 +168,11 @@ updates:
 
   - package-ecosystem: npm
     target-branch: main
+    directory: /docs
+    schedule:
+      interval: weekly
+  - package-ecosystem: npm
+    target-branch: 6.3.x
     directory: /docs
     schedule:
       interval: weekly
