Fix job dependencies
Issue gh-15503

--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -247,7 +247,7 @@ jobs:
         run: ./gradlew scheduleNextRelease -PnextVersion=$VERSION -PgitHubAccessToken=$TOKEN
   send-notification:
     name: Send Notification
-    needs: [ perform-release ]
+    needs: [ perform_release, perform_post_release ]
     if: failure()
     runs-on: ubuntu-latest
     steps:
