--- a/.github/workflows/update-scheduled-release-version.yml
+++ b/.github/workflows/update-scheduled-release-version.yml
@@ -4,6 +4,7 @@ on:
   workflow_dispatch: # Manual trigger only. Triggered by release-scheduler.yml on main.
 
 env:
+  SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
   DEVELOCITY_ACCESS_KEY: ${{ secrets.GRADLE_ENTERPRISE_SECRET_ACCESS_KEY }}
 
 permissions:
@@ -57,11 +58,12 @@ jobs:
           git tag $updatedVersion
           git push
           git push origin $updatedVersion
-      - name: Send Notification
+      - id: send-slack-notification
+        name: Send Slack message
         if: failure()
-        uses: spring-io/spring-security-release-tools/.github/actions/send-notification@v1
+        uses: Gamesight/slack-workflow-status@v1.3.0
         with:
-          webhook-url: ${{ secrets.SPRING_SECURITY_CI_GCHAT_WEBHOOK_URL }}
-          status: ${{ job.status }}
-          build-scan-url: ${{ steps.build-and-publish.outputs.build-scan-url }}
-          run-name: ${{ format('spring-security/{0}', github.ref_name) }}
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          slack_webhook_url: ${{ secrets.SLACK_WEBHOOK_URL }}
+          channel: '#spring-security-ci'
+          name: 'CI Notifier'
