--- a/settings.gradle
+++ b/settings.gradle
@@ -6,7 +6,7 @@ pluginManagement {
 
 plugins {
 	id "com.gradle.develocity" version "3.18"
-	id "io.spring.ge.conventions" version "0.0.17"
+	id "io.spring.develocity.conventions" version "0.0.20"
 }
 
 dependencyResolutionManagement {
