--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -164,24 +164,39 @@ updates:
     directory: /
     schedule:
       interval: weekly
+    labels:
+      - 'type: task'
+      - 'in: build'
 
   - package-ecosystem: npm
     target-branch: main
     directory: /docs
     schedule:
       interval: weekly
+    labels:
+      - 'type: task'
+      - 'in: build'
   - package-ecosystem: npm
     target-branch: 6.3.x
     directory: /docs
     schedule:
       interval: weekly
+    labels:
+      - 'type: task'
+      - 'in: build'
   - package-ecosystem: npm
     target-branch: 6.2.x
     directory: /docs
     schedule:
       interval: weekly
+    labels:
+      - 'type: task'
+      - 'in: build'
   - package-ecosystem: npm
     target-branch: 5.8.x
     directory: /docs
     schedule:
       interval: weekly
+    labels:
+      - 'type: task'
+      - 'in: build'
