--- a/ssrf/build.gradle
+++ b/ssrf/build.gradle
@@ -19,9 +19,15 @@ dependencies {
     // Use JUnit Jupiter for testing.
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
 
-    api 'org.springframework:spring-web:6.1.14'
+    api 'org.springframework:spring-web:' + springVersion
 
-    api 'org.springframework:spring-core:6.1.14'
+    api 'org.springframework:spring-core:' + springVersion
+
+
+	api("org.apache.httpcomponents.client5:httpclient5:5.3.1")
+	api("org.apache.httpcomponents.core5:httpcore5-reactive:5.2.5")
+
+	implementation 'io.projectreactor:reactor-core:3.6.11'
 }
 
 tasks.named('test') {
